# ros_yolov5

./: README.md  train.py
data/: VOC.yaml  drone.yaml
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/image_get/: image_get_node
devel/lib/image_pretreatment/: image_pretreatment_node
devel/lib/pkgconfig/: image_get.pc  image_pretreatment.pc  rem_fog.pc  remove_fog.pc  video_capture.pc  yolov5.pc
devel/lib/remove_fog/: remove_fog_node
devel/lib/video_capture/: video_capture_node
devel/share/image_get/cmake/: image_getConfig.cmake
devel/share/image_pretreatment/cmake/: image_pretreatmentConfig.cmake
devel/share/rem_fog/cmake/: rem_fogConfig.cmake
devel/share/remove_fog/cmake/: remove_fogConfig.cmake
devel/share/video_capture/cmake/: video_captureConfig.cmake
devel/share/yolov5/cmake/: yolov5Config.cmake
models/: yolo.py  yolov5s-tiny.yaml  yolov5s.yaml  yolov5s2.yaml
src/desnow/model/: model.py
src/image_get/: CMakeLists.txt
src/image_get/src/: image_get.cpp
src/remove_fog/: CMakeLists.txt
src/remove_fog/launch/: image_fog.launch
src/remove_fog/scripts/: remove_fog.py
utils/: datasets.py  general.py
